[package]
name = "testevents"
version = "0.1.0"
edition = "2021"
authors = ["Jeremy Blythe <jeremyblythe@gmail.com>"]
repository = "https://github.com/jerbly/testevents"

[dependencies]
anyhow = "1.0.86"
axum = "0.7.5"
chrono = "0.4.38"
futures = "0.3.30"
honeycomb-client = { git = "https://github.com/jerbly/honeycomb-client", tag = "0.2.2" }
# honeycomb-client = { path = "../honeycomb-client" }
opentelemetry = "0.22"
opentelemetry_sdk = "0.22"
opentelemetry-stdout = { version = "0.3", features = ["trace"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"
tokio = { version = "1.38.0", features = ["full"] }
dotenv = "0.15.0"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.18.0"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell", "powershell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
# Publish jobs to run in CI
pr-run-mode = "skip"
# Whether to install an updater program
install-updater = false
