[package]
name = "testevents"
version = "0.4.0"
edition = "2021"
authors = ["Jeremy Blythe <jeremyblythe@gmail.com>"]
repository = "https://github.com/jerbly/testevents"

[dependencies]
anyhow = "1.0.86"
axum = "0.7.5"
chrono = "0.4.38"
futures = "0.3.30"
opentelemetry = "0.21.0"
opentelemetry_sdk = { version = "0.21.2", features = ["rt-tokio"] }
opentelemetry-semantic-conventions = "0.14"
opentelemetry-otlp = { version = "0.14", features = ["tls", "tls-roots"] }
tonic = { version = "0.9.2" }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"
tokio = { version = "1.38.0", features = ["full"] }
dotenv = "0.15.0"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.18.0"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell", "powershell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = [
    "aarch64-apple-darwin",
    "aarch64-unknown-linux-gnu",
    "x86_64-apple-darwin",
    "x86_64-unknown-linux-gnu",
    "x86_64-pc-windows-msvc",
]
# Publish jobs to run in CI
pr-run-mode = "skip"
# Whether to install an updater program
install-updater = false

[workspace.metadata.dist.dependencies.apt]
gcc-aarch64-linux-gnu = { version = '*', targets = [
    "aarch64-unknown-linux-gnu",
] }
